@@ -14,9 +14,10 @@ module Vpim
 
     # 1*(ALPHA / DIGIT / "-")
     # Note: I think I can add A-Z here, and get rid of the "i" matches elsewhere.
-    # Note: added '_' to allowed because its produced by Notes - X-LOTUS-CHILD_UID
-    # Note: added '/' to allowed because its produced by KAddressBook - X-messaging/xmpp-All:
-    NAME    = '[-a-z0-9_/]+'
+    # Note: added '_' to allowed because its produced by Notes  (X-LOTUS-CHILD_UID:)
+    # Note: added '/' to allowed because its produced by KAddressBook (X-messaging/xmpp-All:)
+    # Note: added ' ' to allowed because its produced by highrisehq.com (X-GOOGLE TALK:)
+    NAME    = '[-a-z0-9_/][-a-z0-9_/ ]*'
 
     # <"> <Any character except CTLs, DQUOTE> <">
     QSTR    = '"([^"]*)"'
